# CMakeTemplate

./: .gitignore  CMakeLists.txt  FooConfig.hpp.in  LICENSE.md  README.md
bar/: CMakeLists.txt
bar/include/bar/: bar.h
bar/src/: bar.cpp
examples/: CMakeLists.txt
foo/: CMakeLists.txt  FooConfig.cmake.in
foo/examples/src/: main.cpp
foo/src/: foo.cpp  foo.h
foo/tests/src/: test_main.cpp
include/foo/: foo.h
src/: foo.cpp
testfoo/: CMakeLists.txt
testfoo/src/: main.cpp
tests/: CMakeLists.txt
